# fears

./: .gitignore  CITATION.cff  LICENSE  README.md  TODO.txt  adherance_survival_experiment.py  adherance_survival_figure.py  cycloguanil_ic50.csv  dose_survival_experiment.py  drug_compliance_experiment.py  example_simulations.py  experiment_class_raw.py  inoculant_experiment.py  paper.bib  paper.md  population_class.py  rate_survival_experiment.py  rate_survival_experiment_pharm.py  setup.cfg  setup.py  todo.txt  yeast_experiment.py
classes/: experiment_class.py  experiment_class_raw.py  population_class.py
data/: cycloguanil_ic50.csv  pyrimethamine_ic50.csv
docs/: index.html
examples/: Fitness Working.ipynb  example.py  example_from_file.ipynb  example_notebook.html  example_notebook.ipynb  landscape_examples.py  one_click_reproduction.py  population_examples.py  seascape_2.csv  seascape_estimation.py
experiments/: adherance_survival_experiment.py  dose_survival_experiment.py  null_model_experiment.py  ramp_up_down_experiment.py  rate_survival_experiment.py  rate_survival_experiment_pharm.py  seascape_v_landscape.py
fears/: experiment.py  population.py
fears.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
figure_code/: adherance_survival_figure.py  adherance_survival_figure_v2.py  adherance_survival_heatmap.py  example_timecourses.py  grant_figure.py  km_figure.py  landscape_vs_seascape.py  nonadherance_km_figure.py  pharm_survival_experiment_figure.py  ramp_up_down_figure.py  rate_of_change_km_fig.py  rate_of_change_tc.py  (+3 more)
src/: utils.py
(+82 files in other folders)
