[metadata]
name = fears-eshanking
version = 0.9.1
author = Eshan King
author_email = eshanking@gmail.com
description = FEArS: Fast Evolution on ARbitrary Seascapes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eshanking/fears/tree/dev
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src